poms for kompiler+interface default